feat: Update field-level metrics to include 3 models (Llama-11B, InternVL3-8B, InternVL3-2B)
- Added support for a third model in field-level confusion matrices and visualizations.
- Updated confusion heatmap layout to a 3-panel format for better comparison.
- Enhanced per-field metrics calculations and visualizations to include all three models.
- Introduced a new color scheme for visualizations to differentiate between models.
- Updated console outputs and documentation to reflect changes in model naming and metrics.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -33,6 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 2\n",
+    "\n",
     "import warnings\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
@@ -108,6 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 4\n",
+    "\n",
     "def load_latest_results(output_dir: str, pattern: str, model_name: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Load the most recent CSV results file matching the given pattern.\n",
@@ -176,6 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 5\n",
+    "\n",
     "# Load data for all available models\n",
     "rprint(\"[bold blue]📊 Loading Model Performance Data[/bold blue]\")\n",
     "\n",
@@ -215,6 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 6\n",
+    "\n",
     "def generate_executive_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Generate executive summary statistics from combined model data.\n",
@@ -253,6 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 7\n",
+    "\n",
     "def create_executive_dashboard(df: pd.DataFrame, save_path: str = None):\n",
     "    \"\"\"\n",
     "    Create comprehensive 6-panel executive dashboard comparing model performance.\n",
@@ -456,6 +466,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 8\n",
+    "\n",
     "def extract_field_level_accuracy_from_csv(output_dir: str, pattern: str, model_name: str, ground_truth_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Extract field-level accuracy by comparing CSV batch results against ground truth.\n",
@@ -697,6 +709,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 10\n",
+    "\n",
     "def analyze_field_performance(field_df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Analyze and compare field-level performance across models.\n",
@@ -825,6 +839,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 12\n",
+    "\n",
     "def create_field_level_visualizations(field_df: pd.DataFrame, field_performance: pd.DataFrame, save_path: str = None):\n",
     "    \"\"\"\n",
     "    Create comprehensive field-level performance visualizations.\n",
@@ -1011,6 +1027,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 14\n",
+    "\n",
     "def analyze_model_strengths(df: pd.DataFrame):\n",
     "    \"\"\"\n",
     "    Analyze and compare model strengths and weaknesses.\n",
@@ -1076,6 +1094,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # Cell 16\n",
+    "\n",
     "# Load ground truth as DataFrame for confusion analysis\n",
     "ground_truth_path = Path(CONFIG['ground_truth_path'])\n",
     "\n",
@@ -1161,6 +1181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 18\n",
+    "\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -1369,6 +1391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 20\n",
     "\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import pandas as pd\n",
@@ -1459,14 +1482,15 @@
     "\n",
     "    return pd.DataFrame(confusion_data)\n",
     "\n",
-    "# Create confusion data for both models\n",
+    "# Create confusion data for all 3 models\n",
     "rprint(\"[bold cyan]Creating field-level confusion matrices...[/bold cyan]\")\n",
     "\n",
-    "llama_confusion = create_field_confusion_data(llama_batch_df, ground_truth, 'Llama')\n",
-    "internvl_confusion = create_field_confusion_data(internvl_batch_df, ground_truth, 'InternVL3')\n",
+    "llama_confusion = create_field_confusion_data(llama_batch_df, ground_truth, 'Llama-11B')\n",
+    "internvl_confusion = create_field_confusion_data(internvl_batch_df, ground_truth, 'InternVL3-8B')\n",
+    "internvl_nq_confusion = create_field_confusion_data(internvl_nq_batch_df, ground_truth, 'InternVL3-2B')\n",
     "\n",
-    "# Combine both models\n",
-    "all_confusion = pd.concat([llama_confusion, internvl_confusion], ignore_index=True)\n",
+    "# Combine all 3 models\n",
+    "all_confusion = pd.concat([llama_confusion, internvl_confusion, internvl_nq_confusion], ignore_index=True)\n",
     "\n",
     "# Create pivot table for heatmap visualization\n",
     "def plot_confusion_heatmap(confusion_df: pd.DataFrame, model_name: str, ax):\n",
@@ -1496,26 +1520,27 @@
     "        linecolor='gray'\n",
     "    )\n",
     "\n",
-    "    ax.set_title(f'{model_name} - Field Extraction Status', fontsize=14, fontweight='bold')\n",
-    "    ax.set_xlabel('Extraction Status', fontsize=12, fontweight='bold')\n",
-    "    ax.set_ylabel('Field Name', fontsize=12, fontweight='bold')\n",
+    "    ax.set_title(f'{model_name} - Field Extraction Status', fontsize=13, fontweight='bold')\n",
+    "    ax.set_xlabel('Extraction Status', fontsize=11, fontweight='bold')\n",
+    "    ax.set_ylabel('Field Name', fontsize=11, fontweight='bold')\n",
     "    ax.tick_params(axis='y', rotation=0)\n",
     "\n",
-    "# Create side-by-side heatmaps\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(18, 12))\n",
+    "# Create 3-panel heatmaps\n",
+    "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(24, 12))\n",
     "\n",
-    "plot_confusion_heatmap(all_confusion, 'Llama', ax1)\n",
-    "plot_confusion_heatmap(all_confusion, 'InternVL3', ax2)\n",
+    "plot_confusion_heatmap(all_confusion, 'Llama-11B', ax1)\n",
+    "plot_confusion_heatmap(all_confusion, 'InternVL3-8B', ax2)\n",
+    "plot_confusion_heatmap(all_confusion, 'InternVL3-2B', ax3)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/field_confusion_heatmap.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "rprint(\"[green]✅ Field-level confusion heatmaps created[/green]\")\n",
+    "rprint(\"[green]✅ Field-level confusion heatmaps created (3 models)[/green]\")\n",
     "\n",
     "# Create summary statistics\n",
     "rprint(\"\\n[bold blue]Field Confusion Summary:[/bold blue]\")\n",
-    "for model in ['Llama', 'InternVL3']:\n",
+    "for model in ['Llama-11B', 'InternVL3-8B', 'InternVL3-2B']:\n",
     "    model_data = all_confusion[all_confusion['model'] == model]\n",
     "    total = model_data['count'].sum()\n",
     "    correct = model_data[model_data['status'] == 'correct']['count'].sum()\n",
@@ -1549,6 +1574,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 22\n",
     "\n",
     "from sklearn.metrics import classification_report, precision_recall_fscore_support\n",
     "import pandas as pd\n",
@@ -1642,14 +1668,15 @@
     "\n",
     "    return pd.DataFrame(metrics_data)\n",
     "\n",
-    "# Compute metrics for both models\n",
+    "# Compute metrics for all 3 models\n",
     "rprint(\"[bold cyan]Computing per-field precision/recall/F1 metrics...[/bold cyan]\")\n",
     "\n",
-    "llama_metrics = compute_per_field_metrics(llama_batch_df, ground_truth, 'Llama')\n",
-    "internvl_metrics = compute_per_field_metrics(internvl_batch_df, ground_truth, 'InternVL3')\n",
+    "llama_metrics = compute_per_field_metrics(llama_batch_df, ground_truth, 'Llama-11B')\n",
+    "internvl_metrics = compute_per_field_metrics(internvl_batch_df, ground_truth, 'InternVL3-8B')\n",
+    "internvl_nq_metrics = compute_per_field_metrics(internvl_nq_batch_df, ground_truth, 'InternVL3-2B')\n",
     "\n",
-    "# Combine both models\n",
-    "all_metrics = pd.concat([llama_metrics, internvl_metrics], ignore_index=True)\n",
+    "# Combine all 3 models\n",
+    "all_metrics = pd.concat([llama_metrics, internvl_metrics, internvl_nq_metrics], ignore_index=True)\n",
     "\n",
     "# Display metrics table\n",
     "rprint(\"\\n[bold blue]Per-Field Metrics Comparison:[/bold blue]\")\n",
@@ -1663,10 +1690,13 @@
     "# Create visualizations\n",
     "fig, axes = plt.subplots(2, 2, figsize=(20, 16))\n",
     "\n",
+    "# Colors for 3 models: Llama (blue), InternVL3-8B (red), InternVL3-2B (green)\n",
+    "model_colors = ['#3498db', '#e74c3c', '#2ecc71']\n",
+    "\n",
     "# Plot 1: F1 Score comparison\n",
     "ax1 = axes[0, 0]\n",
     "pivot_f1 = all_metrics.pivot(index='field', columns='model', values='f1_score')\n",
-    "pivot_f1.plot(kind='barh', ax=ax1, color=['#3498db', '#e74c3c'])\n",
+    "pivot_f1.plot(kind='barh', ax=ax1, color=model_colors)\n",
     "ax1.set_title('F1 Score by Field', fontsize=14, fontweight='bold')\n",
     "ax1.set_xlabel('F1 Score', fontsize=12, fontweight='bold')\n",
     "ax1.set_ylabel('Field', fontsize=12, fontweight='bold')\n",
@@ -1676,7 +1706,7 @@
     "# Plot 2: Precision comparison\n",
     "ax2 = axes[0, 1]\n",
     "pivot_precision = all_metrics.pivot(index='field', columns='model', values='precision')\n",
-    "pivot_precision.plot(kind='barh', ax=ax2, color=['#3498db', '#e74c3c'])\n",
+    "pivot_precision.plot(kind='barh', ax=ax2, color=model_colors)\n",
     "ax2.set_title('Precision by Field', fontsize=14, fontweight='bold')\n",
     "ax2.set_xlabel('Precision', fontsize=12, fontweight='bold')\n",
     "ax2.set_ylabel('Field', fontsize=12, fontweight='bold')\n",
@@ -1686,7 +1716,7 @@
     "# Plot 3: Recall comparison\n",
     "ax3 = axes[1, 0]\n",
     "pivot_recall = all_metrics.pivot(index='field', columns='model', values='recall')\n",
-    "pivot_recall.plot(kind='barh', ax=ax3, color=['#3498db', '#e74c3c'])\n",
+    "pivot_recall.plot(kind='barh', ax=ax3, color=model_colors)\n",
     "ax3.set_title('Recall by Field', fontsize=14, fontweight='bold')\n",
     "ax3.set_xlabel('Recall', fontsize=12, fontweight='bold')\n",
     "ax3.set_ylabel('Field', fontsize=12, fontweight='bold')\n",
@@ -1696,7 +1726,7 @@
     "# Plot 4: Accuracy comparison\n",
     "ax4 = axes[1, 1]\n",
     "pivot_accuracy = all_metrics.pivot(index='field', columns='model', values='accuracy')\n",
-    "pivot_accuracy.plot(kind='barh', ax=ax4, color=['#3498db', '#e74c3c'])\n",
+    "pivot_accuracy.plot(kind='barh', ax=ax4, color=model_colors)\n",
     "ax4.set_title('Accuracy by Field', fontsize=14, fontweight='bold')\n",
     "ax4.set_xlabel('Accuracy', fontsize=12, fontweight='bold')\n",
     "ax4.set_ylabel('Field', fontsize=12, fontweight='bold')\n",
@@ -1707,7 +1737,7 @@
     "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/per_field_metrics.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
-    "rprint(\"[green]✅ Per-field metrics visualizations created[/green]\")\n",
+    "rprint(\"[green]✅ Per-field metrics visualizations created (3 models)[/green]\")\n",
     "\n",
     "# Summary statistics\n",
     "rprint(\"\\n[bold blue]Model Performance Summary:[/bold blue]\")\n",
@@ -1733,6 +1763,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 24\n",
+    "\n",
     "def generate_business_recommendations(df: pd.DataFrame, field_performance: pd.DataFrame = None):\n",
     "    \"\"\"\n",
     "    Generate executive business recommendations based on CSV data analysis only.\n",
@@ -1842,6 +1874,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 25\n",
+    "\n",
     "def export_executive_report(df: pd.DataFrame, output_dir: str = \"output/reports\", visualization_timestamp: str = None):\n",
     "    \"\"\"\n",
     "    Export a comprehensive executive report in multiple formats.\n",
@@ -1921,6 +1955,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cell 26\n",
+    "\n",
     "# Export reports with visualization reference\n",
     "if not combined_df.empty:\n",
     "    # Use the dashboard timestamp from earlier\n",
@@ -1940,7 +1976,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CURENT VERSION"
+    "## VERSION 101"
    ]
   }
  ],
