Update model comparison metrics in Jupyter notebook
- Changed overall accuracy calculation from median to mean for better representation.
- Updated table column label from 'Median Accuracy' to 'Avg Acc' for clarity.
- Adjusted heatmap text color threshold from 0.6 to 0.45 to improve visibility of values.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -400,14 +400,14 @@
     "        model_data = df_plot[df_plot['model'] == model]\n",
     "        summary_data.append([\n",
     "            model,\n",
-    "            f\"{model_data['overall_accuracy'].median():.1f}%\",\n",
+    "            f\"{model_data['overall_accuracy'].mean():.1f}%\",\n",
     "            f\"{model_data['processing_time'].mean():.1f}s\",\n",
     "            f\"{(60 / model_data['processing_time'].mean()):.1f}\",\n",
     "            f\"{model_data['overall_accuracy'].std():.1f}%\"\n",
     "        ])\n",
     "    \n",
     "    table = ax6.table(cellText=summary_data,\n",
-    "                     colLabels=['Model', 'Median Accuracy', 'Avg Time', 'Docs/min', 'Std Dev'],\n",
+    "                     colLabels=['Model', 'Avg Acc', 'Avg Time', 'Docs/min', 'Std Dev'],\n",
     "                     cellLoc='center',\n",
     "                     loc='center',\n",
     "                     colWidths=[0.35, 0.15, 0.15, 0.15, 0.15])\n",
@@ -942,7 +942,7 @@
     "        for j in range(len(model_cols)):\n",
     "            value = heatmap_data.iloc[i, j]\n",
     "            if not np.isnan(value):\n",
-    "                text_color = 'white' if value < 0.6 else 'black'\n",
+    "                text_color = 'white' if value < 0.45 else 'black'\n",
     "                ax2.text(j, i, f'{value:.0%}', ha='center', va='center', \n",
     "                        color=text_color, fontsize=9, fontweight='bold')\n",
     "    \n",
