--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -4,55 +4,36 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "bash: line 6: syntax error near unexpected token `\"internvl3_non_quantized_batch_results_*.csv\"'\n",
-      "bash: line 6: `\"internvl3_non_quantized_batch_results_*.csv\"; do'\n"
-     ]
-    },
-    {
-     "ename": "CalledProcessError",
-     "evalue": "Command 'b'\\n# cd /path/to/LMM_POC\\n\\n# For each pattern, keep only the most recent file\\nfor pattern in \"llama_batch_results_*.csv\" \"internvl3_batch_results_*.csv\"\\n\"internvl3_non_quantized_batch_results_*.csv\"; do\\n    cd output/csv\\n    # Find all files matching pattern\\n    files=($(ls -t $pattern 2>/dev/null))\\n\\n    if [ ${#files[@]} -gt 1 ]; then\\n        echo \"Pattern: $pattern\"\\n        echo \"  Keeping: ${files[0]}\"\\n        echo \"  Deleting ${#files[@]}-1 older files...\"\\n\\n        # Delete all except the most recent\\n        for ((i=1; i<${#files[@]}; i++)); do\\n            rm \"${files[$i]}\"\\n            echo \"    \\xe2\\x9c\\x97 Deleted: ${files[$i]}\"\\n        done\\n    fi\\n    cd ../..\\ndone\\n'' returned non-zero exit status 2.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mCalledProcessError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_cell_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbash\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m# cd /path/to/LMM_POC\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m# For each pattern, keep only the most recent file\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43mfor pattern in \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mllama_batch_results_*.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43minternvl3_batch_results_*.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43minternvl3_non_quantized_batch_results_*.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m; do\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    cd output/csv\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    # Find all files matching pattern\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    files=($(ls -t $pattern 2>/dev/null))\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    if [ $\u001b[39;49m\u001b[38;5;124;43m{\u001b[39;49m\u001b[38;5;124;43m#files[@]} -gt 1 ]; then\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        echo \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPattern: $pattern\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        echo \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m  Keeping: $\u001b[39;49m\u001b[38;5;132;43;01m{files[0]}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        echo \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m  Deleting $\u001b[39;49m\u001b[38;5;124;43m{\u001b[39;49m\u001b[38;5;124;43m#files[@]}-1 older files...\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        # Delete all except the most recent\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        for ((i=1; i<$\u001b[39;49m\u001b[38;5;124;43m{\u001b[39;49m\u001b[38;5;124;43m#files[@]}; i++)); do\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m            rm \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m$\u001b[39;49m\u001b[38;5;132;43;01m{files[$i]}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m            echo \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m    ✗ Deleted: $\u001b[39;49m\u001b[38;5;132;43;01m{files[$i]}\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m        done\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    fi\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m    cd ../..\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43mdone\u001b[39;49m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/IPython/core/interactiveshell.py:2541\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2539\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2540\u001b[0m     args \u001b[38;5;241m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2541\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2543\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2544\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2545\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2546\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/IPython/core/magics/script.py:155\u001b[0m, in \u001b[0;36mScriptMagics._make_script_magic.<locals>.named_script_magic\u001b[0;34m(line, cell)\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    154\u001b[0m     line \u001b[38;5;241m=\u001b[39m script\n\u001b[0;32m--> 155\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshebang\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcell\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/IPython/core/magics/script.py:315\u001b[0m, in \u001b[0;36mScriptMagics.shebang\u001b[0;34m(self, line, cell)\u001b[0m\n\u001b[1;32m    310\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m args\u001b[38;5;241m.\u001b[39mraise_error \u001b[38;5;129;01mand\u001b[39;00m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    311\u001b[0m     \u001b[38;5;66;03m# If we get here and p.returncode is still None, we must have\u001b[39;00m\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;66;03m# killed it but not yet seen its return code. We don't wait for it,\u001b[39;00m\n\u001b[1;32m    313\u001b[0m     \u001b[38;5;66;03m# in case it's stuck in uninterruptible sleep. -9 = SIGKILL\u001b[39;00m\n\u001b[1;32m    314\u001b[0m     rc \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m9\u001b[39m\n\u001b[0;32m--> 315\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CalledProcessError(rc, cell)\n",
-      "\u001b[0;31mCalledProcessError\u001b[0m: Command 'b'\\n# cd /path/to/LMM_POC\\n\\n# For each pattern, keep only the most recent file\\nfor pattern in \"llama_batch_results_*.csv\" \"internvl3_batch_results_*.csv\"\\n\"internvl3_non_quantized_batch_results_*.csv\"; do\\n    cd output/csv\\n    # Find all files matching pattern\\n    files=($(ls -t $pattern 2>/dev/null))\\n\\n    if [ ${#files[@]} -gt 1 ]; then\\n        echo \"Pattern: $pattern\"\\n        echo \"  Keeping: ${files[0]}\"\\n        echo \"  Deleting ${#files[@]}-1 older files...\"\\n\\n        # Delete all except the most recent\\n        for ((i=1; i<${#files[@]}; i++)); do\\n            rm \"${files[$i]}\"\\n            echo \"    \\xe2\\x9c\\x97 Deleted: ${files[$i]}\"\\n        done\\n    fi\\n    cd ../..\\ndone\\n'' returned non-zero exit status 2."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "\n",
-    "# cd /path/to/LMM_POC\n",
+    "# Keep only most recent CSV files for each model pattern\n",
     "\n",
-    "# For each pattern, keep only the most recent file\n",
-    "for pattern in \"llama_batch_results_*.csv\" \"internvl3_batch_results_*.csv\"\n",
-    "\"internvl3_non_quantized_batch_results_*.csv\"; do\n",
-    "    cd output/csv\n",
-    "    # Find all files matching pattern\n",
+    "cd output/csv 2>/dev/null || { echo \"output/csv directory not found, skipping cleanup\"; exit 0; }\n",
+    "\n",
+    "for pattern in \"llama_batch_results_*.csv\" \"internvl3_batch_results_*.csv\" \"internvl3_non_quantized_batch_results_*.csv\"; do\n",
     "    files=($(ls -t $pattern 2>/dev/null))\n",
-    "\n",
+    "    \n",
     "    if [ ${#files[@]} -gt 1 ]; then\n",
     "        echo \"Pattern: $pattern\"\n",
     "        echo \"  Keeping: ${files[0]}\"\n",
-    "        echo \"  Deleting ${#files[@]}-1 older files...\"\n",
-    "\n",
-    "        # Delete all except the most recent\n",
+    "        echo \"  Deleting $((${#files[@]}-1)) older files...\"\n",
+    "        \n",
     "        for ((i=1; i<${#files[@]}; i++)); do\n",
     "            rm \"${files[$i]}\"\n",
     "            echo \"    ✗ Deleted: ${files[$i]}\"\n",
     "        done\n",
+    "    elif [ ${#files[@]} -eq 1 ]; then\n",
+    "        echo \"Pattern: $pattern - 1 file (kept)\"\n",
+    "    else\n",
+    "        echo \"Pattern: $pattern - no files found\"\n",
     "    fi\n",
-    "    cd ../..\n",
-    "done\n"
+    "done\n",
+    "\n",
+    "cd ../..\n",
+    "echo \"✅ Cleanup complete\"\n",
+    ""
    ]
   },
   {
