Fix SyntaxError and improve markdown formatting in model comparison report generation
- Resolved unterminated string literal error in report generation function.
- Updated markdown formatting for better readability and consistency.
- Removed unnecessary blank lines to streamline the code.
- Enhanced error handling messages for clarity.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -5685,16 +5685,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 135) (2454759042.py, line 135)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 135\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mreport += \"### Field-Level Accuracy by Model\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 135)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Cell 29\n",
     "\n",
@@ -5705,9 +5696,9 @@
     "\n",
     "def generate_model_comparison_report():\n",
     "    \"\"\"Generate comprehensive MODEL_COMPARISON_ANALYSIS.md from notebook analysis.\"\"\"\n",
-    "    \n",
+    "\n",
     "    timestamp = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
-    "    \n",
+    "\n",
     "    # Extract overall metrics\n",
     "    try:\n",
     "        llama_overall_f1 = llama_batch_df['f1_score'].mean()\n",
@@ -5718,7 +5709,7 @@
     "    except:\n",
     "        rprint(\"[yellow]⚠ Llama metrics unavailable[/yellow]\")\n",
     "        llama_overall_f1 = llama_overall_precision = llama_overall_recall = llama_overall_accuracy = llama_speed = 0\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        internvl_8b_overall_f1 = internvl_batch_df['f1_score'].mean()\n",
     "        internvl_8b_overall_precision = internvl_batch_df['precision'].mean()\n",
@@ -5728,7 +5719,7 @@
     "    except:\n",
     "        rprint(\"[yellow]⚠ InternVL3-8B metrics unavailable[/yellow]\")\n",
     "        internvl_8b_overall_f1 = internvl_8b_overall_precision = internvl_8b_overall_recall = internvl_8b_overall_accuracy = internvl_8b_speed = 0\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        internvl_2b_overall_f1 = internvl_nq_batch_df['f1_score'].mean()\n",
     "        internvl_2b_overall_precision = internvl_nq_batch_df['precision'].mean()\n",
@@ -5738,14 +5729,14 @@
     "    except:\n",
     "        rprint(\"[yellow]⚠ InternVL3-2B metrics unavailable[/yellow]\")\n",
     "        internvl_2b_overall_f1 = internvl_2b_overall_precision = internvl_2b_overall_recall = internvl_2b_overall_accuracy = internvl_2b_speed = 0\n",
-    "    \n",
+    "\n",
     "    # Build markdown report\n",
     "    report = f\"\"\"# Model Comparison Analysis Report\n",
     "\n",
-    "**Auto-Generated from Notebook**: {timestamp}  \n",
-    "**Source**: `model_comparison.ipynb`  \n",
-    "**Dataset**: 195 documents (30 bank statements, 61 invoices, 104 receipts)  \n",
-    "**Evaluation Fields**: 17 business document fields  \n",
+    "**Auto-Generated from Notebook**: {timestamp}\n",
+    "**Source**: `model_comparison.ipynb`\n",
+    "**Dataset**: 195 documents (30 bank statements, 61 invoices, 104 receipts)\n",
+    "**Evaluation Fields**: 17 business document fields\n",
     "\n",
     "---\n",
     "\n",
@@ -5826,49 +5817,41 @@
     "## Per-Field Performance Summary\n",
     "\n",
     "\"\"\"\n",
-    "    \n",
+    "\n",
     "    # Add per-field performance if available\n",
     "    try:\n",
     "        if 'field_performance' in locals() or 'field_performance' in globals():\n",
-    "            report += \"### Field-Level Accuracy by Model\n",
+    "            report += \"### Field-Level Accuracy by Model\\n\\n\"\n",
+    "            report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\\n\"\n",
+    "            report += \"|-------|-----------|--------------|--------------|------------|------------|\\n\"\n",
     "\n",
-    "\"\n",
-    "            report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\n",
-    "\"\n",
-    "            report += \"|-------|-----------|--------------|--------------|------------|------------|\n",
-    "\"\n",
-    "            \n",
     "            for field in field_performance.index:\n",
     "                llama_acc = field_performance.loc[field, 'Llama-11B'] if 'Llama-11B' in field_performance.columns else 0\n",
     "                internvl_8b_acc = field_performance.loc[field, 'InternVL3-8B'] if 'InternVL3-8B' in field_performance.columns else 0\n",
     "                internvl_2b_acc = field_performance.loc[field, 'InternVL3-2B'] if 'InternVL3-2B' in field_performance.columns else 0\n",
     "                best_model = field_performance.loc[field, 'best_model'] if 'best_model' in field_performance.columns else 'N/A'\n",
     "                best_score = field_performance.loc[field, 'best_score'] if 'best_score' in field_performance.columns else 0\n",
-    "                \n",
-    "                report += f\"| {field} | {llama_acc:.1f}% | {internvl_8b_acc:.1f}% | {internvl_2b_acc:.1f}% | {best_model} | {best_score:.1f}% |\n",
-    "\"\n",
-    "            \n",
-    "            report += \"\n",
-    "\"\n",
-    "    except Exception as e:\n",
-    "        report += f\"_(Per-field metrics unavailable: {e})_\n",
     "\n",
-    "\"\n",
-    "    \n",
+    "                report += f\"| {field} | {llama_acc:.1f}% | {internvl_8b_acc:.1f}% | {internvl_2b_acc:.1f}% | {best_model} | {best_score:.1f}% |\\n\"\n",
+    "\n",
+    "            report += \"\\n\"\n",
+    "    except Exception as e:\n",
+    "        report += f\"_(Per-field metrics unavailable: {e})_\\n\\n\"\n",
+    "\n",
     "    # Add model specialization summary\n",
     "    report += \"\"\"---\n",
     "\n",
     "## Model Specialization\n",
     "\n",
     "\"\"\"\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        if 'field_performance' in locals() or 'field_performance' in globals():\n",
     "            llama_fields = (field_performance['best_model'] == 'Llama-11B').sum() if 'best_model' in field_performance.columns else 0\n",
     "            internvl_8b_fields = (field_performance['best_model'] == 'InternVL3-8B').sum() if 'best_model' in field_performance.columns else 0\n",
     "            internvl_2b_fields = (field_performance['best_model'] == 'InternVL3-2B').sum() if 'best_model' in field_performance.columns else 0\n",
     "            total_fields = len(field_performance)\n",
-    "            \n",
+    "\n",
     "            report += f\"\"\"### Fields Where Each Model Performs Best\n",
     "\n",
     "| Model | Best-Performing Fields | Percentage | Count |\n",
@@ -5879,10 +5862,8 @@
     "\n",
     "\"\"\"\n",
     "    except Exception as e:\n",
-    "        report += f\"_(Specialization metrics unavailable: {e})_\n",
+    "        report += f\"_(Specialization metrics unavailable: {e})_\\n\\n\"\n",
     "\n",
-    "\"\n",
-    "    \n",
     "    # Footer\n",
     "    report += f\"\"\"---\n",
     "\n",
@@ -5905,20 +5886,20 @@
     "\n",
     "---\n",
     "\n",
-    "**Report Auto-Generated**: {timestamp}  \n",
-    "**Source Notebook**: `model_comparison.ipynb`  \n",
-    "**Visualizations**: `output/visualizations/`  \n",
+    "**Report Auto-Generated**: {timestamp}\n",
+    "**Source Notebook**: `model_comparison.ipynb`\n",
+    "**Visualizations**: `output/visualizations/`\n",
     "**Next Update**: Re-run notebook to refresh all metrics and visualizations\n",
     "\"\"\"\n",
-    "    \n",
+    "\n",
     "    # Write to file\n",
     "    output_path = Path('MODEL_COMPARISON_ANALYSIS.md')\n",
     "    with open(output_path, 'w', encoding='utf-8') as f:\n",
     "        f.write(report)\n",
-    "    \n",
+    "\n",
     "    rprint(f\"[green]✅ MODEL_COMPARISON_ANALYSIS.md updated ({len(report)} characters)[/green]\")\n",
     "    rprint(f\"[cyan]📄 Report generated from notebook execution at {timestamp}[/cyan]\")\n",
-    "    \n",
+    "\n",
     "    return output_path\n",
     "\n",
     "# Execute report generation\n",
@@ -5928,7 +5909,8 @@
     "except Exception as e:\n",
     "    rprint(f\"[bold red]❌ Report generation failed: {e}[/bold red]\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()\n"
+    "    traceback.print_exc()\n",
+    ""
    ]
   },
   {
