Refactor error handling in model comparison notebook
- Removed redundant output messages for unavailable metrics.
- Enhanced error handling to provide specific exception messages and DataFrame details when metrics are unavailable.
- Cleaned up output section to avoid clutter and improve readability.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -5685,86 +5685,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000\">⚠ Llama metrics unavailable</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[33m⚠ Llama metrics unavailable\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000\">⚠ InternVL3-8B metrics unavailable</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[33m⚠ InternVL3-8B metrics unavailable\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #808000; text-decoration-color: #808000\">⚠ InternVL3-2B metrics unavailable</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[33m⚠ InternVL3-2B metrics unavailable\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">✅ MODEL_COMPARISON_ANALYSIS.md updated </span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">(</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">5327</span><span style=\"color: #008000; text-decoration-color: #008000\"> characters</span><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">)</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[32m✅ MODEL_COMPARISON_ANALYSIS.md updated \u001b[0m\u001b[1;32m(\u001b[0m\u001b[1;32m5327\u001b[0m\u001b[32m characters\u001b[0m\u001b[1;32m)\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080\">📄 Report generated from notebook execution at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2025</span><span style=\"color: #008080; text-decoration-color: #008080\">-</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">11</span><span style=\"color: #008080; text-decoration-color: #008080\">-</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">13</span><span style=\"color: #008080; text-decoration-color: #008080\"> </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">22:50:05</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[36m📄 Report generated from notebook execution at \u001b[0m\u001b[1;36m2025\u001b[0m\u001b[36m-\u001b[0m\u001b[1;36m11\u001b[0m\u001b[36m-\u001b[0m\u001b[1;36m13\u001b[0m\u001b[36m \u001b[0m\u001b[1;36m22:50:05\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000; font-weight: bold\">✅ Auto-generation complete: MODEL_COMPARISON_ANALYSIS.md</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1;32m✅ Auto-generation complete: MODEL_COMPARISON_ANALYSIS.md\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Cell 29\n",
     "\n",
@@ -5785,8 +5706,11 @@
     "        llama_overall_recall = llama_df['recall'].mean()\n",
     "        llama_overall_accuracy = llama_df['overall_accuracy'].mean()\n",
     "        llama_speed = llama_df['processing_time'].median()\n",
-    "    except:\n",
-    "        rprint(\"[yellow]⚠ Llama metrics unavailable[/yellow]\")\n",
+    "    except Exception as e:\n",
+    "        rprint(f\"[yellow]⚠ Llama metrics unavailable: {e}[/yellow]\")\n",
+    "        if not llama_df.empty:\n",
+    "            rprint(f\"[cyan]Llama DF columns: {llama_df.columns.tolist()}[/cyan]\")\n",
+    "            rprint(f\"[cyan]Llama DF shape: {llama_df.shape}[/cyan]\")\n",
     "        llama_overall_f1 = llama_overall_precision = llama_overall_recall = llama_overall_accuracy = llama_speed = 0\n",
     "\n",
     "    try:\n",
@@ -5795,8 +5719,11 @@
     "        internvl_8b_overall_recall = internvl3_quantized_df['recall'].mean()\n",
     "        internvl_8b_overall_accuracy = internvl3_quantized_df['overall_accuracy'].mean()\n",
     "        internvl_8b_speed = internvl3_quantized_df['processing_time'].median()\n",
-    "    except:\n",
-    "        rprint(\"[yellow]⚠ InternVL3-8B metrics unavailable[/yellow]\")\n",
+    "    except Exception as e:\n",
+    "        rprint(f\"[yellow]⚠ InternVL3-8B metrics unavailable: {e}[/yellow]\")\n",
+    "        if not internvl3_quantized_df.empty:\n",
+    "            rprint(f\"[cyan]InternVL3-8B DF columns: {internvl3_quantized_df.columns.tolist()}[/cyan]\")\n",
+    "            rprint(f\"[cyan]InternVL3-8B DF shape: {internvl3_quantized_df.shape}[/cyan]\")\n",
     "        internvl_8b_overall_f1 = internvl_8b_overall_precision = internvl_8b_overall_recall = internvl_8b_overall_accuracy = internvl_8b_speed = 0\n",
     "\n",
     "    try:\n",
@@ -5805,8 +5732,11 @@
     "        internvl_2b_overall_recall = internvl3_non_quantized_df['recall'].mean()\n",
     "        internvl_2b_overall_accuracy = internvl3_non_quantized_df['overall_accuracy'].mean()\n",
     "        internvl_2b_speed = internvl3_non_quantized_df['processing_time'].median()\n",
-    "    except:\n",
-    "        rprint(\"[yellow]⚠ InternVL3-2B metrics unavailable[/yellow]\")\n",
+    "    except Exception as e:\n",
+    "        rprint(f\"[yellow]⚠ InternVL3-2B metrics unavailable: {e}[/yellow]\")\n",
+    "        if not internvl3_non_quantized_df.empty:\n",
+    "            rprint(f\"[cyan]InternVL3-2B DF columns: {internvl3_non_quantized_df.columns.tolist()}[/cyan]\")\n",
+    "            rprint(f\"[cyan]InternVL3-2B DF shape: {internvl3_non_quantized_df.shape}[/cyan]\")\n",
     "        internvl_2b_overall_f1 = internvl_2b_overall_precision = internvl_2b_overall_recall = internvl_2b_overall_accuracy = internvl_2b_speed = 0\n",
     "\n",
     "    # Build markdown report\n",
@@ -5988,7 +5918,8 @@
     "except Exception as e:\n",
     "    rprint(f\"[bold red]❌ Report generation failed: {e}[/bold red]\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()\n"
+    "    traceback.print_exc()\n",
+    ""
    ]
   },
   {
